Fix z-index.

--- a/css/big.css
+++ b/css/big.css
@@ -11,7 +11,7 @@ html {
 
 article .bg {
 	opacity: 0;
-	z-index: -1;
+	z-index: -2;
 	display: block;
 	position: fixed;
 	top: 0;
@@ -30,7 +30,7 @@ article .bg {
 #misc   .bg { background-image: url('../img/bg/misc.jpg'); }
 
 article:hover  .bg { opacity: 0.1; }
-article:target .bg { opacity: 1; }
+article:target .bg { opacity: 1;  z-index: -1; }
 
 #align {
 	position: absolute;
